# ITSM-Agent

./: Constants.py  agents.py  app.py  knowledge_base.py  main.py  pyproject.toml  sample.env  tickets.csv  tools.py
Backupcodes/: bkver1.py  expected.py  main_Ref.py  well.py
data/docs/: Issues-Mail.docx
